testsuite/tests/parser/should_fail/cmdFail008.hs
{-# LANGUAGE Arrows #-}
module CmdFail008 where

f = proc x -> (! (_ -< _))
