testsuite/tests/parser/should_fail/cmdFail008.stderr

cmdFail008.hs:4:16: error: Parse error in command: !(_ -< _)
